simple html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-aosidoaishd
+
+<!DOCTYPE html>
+<html>
+<title>temporary parking page</title>
+<body>
+
+<h1>Webpage. </h1>
+<p>Greetings..</p>
+
+</body>
+</html>
+
